--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     "firebase/firestore": "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "firebase/": "https://esm.sh/firebase@^12.8.0/"
+    "firebase/": "https://esm.sh/firebase@^12.8.0/",
+    "@firebase/auth": "https://esm.sh/@firebase/auth@^1.12.0"
   }
 }
 </script>
