--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "lucide-react": "https://esm.sh/lucide-react@0.473.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
-    "firebase/app": "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js",
-    "firebase/auth": "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js",
-    "firebase/firestore": "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js",
+    "firebase/app": "https://esm.sh/firebase@11.0.1/app",
+    "firebase/auth": "https://esm.sh/firebase@11.0.1/auth",
+    "firebase/firestore": "https://esm.sh/firebase@11.0.1/firestore",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "firebase/": "https://esm.sh/firebase@^12.8.0/"
+    "firebase/": "https://esm.sh/firebase@^12.8.0/",
+    "@firebase/auth": "https://esm.sh/@firebase/auth@^1.12.0",
+    "@firebase/app": "https://esm.sh/@firebase/app@^0.14.7",
+    "@firebase/firestore": "https://esm.sh/@firebase/firestore@^4.10.0"
   }
 }
 </script>
