--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "@firebase/app": "https://esm.sh/@firebase/app@^0.14.7",
     "@firebase/auth": "https://esm.sh/@firebase/auth@^1.12.0",
-    "@firebase/firestore": "https://esm.sh/@firebase/firestore@^4.10.0"
+    "@firebase/firestore": "https://esm.sh/@firebase/firestore@^4.10.0",
+    "firebase/": "https://esm.sh/firebase@^12.8.0/"
   }
 }
 </script>
