--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "lucide-react": "https://esm.sh/lucide-react@0.473.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
-    "firebase/app": "https://esm.sh/firebase@11.1.0/app",
-    "firebase/auth": "https://esm.sh/firebase@11.1.0/auth",
-    "firebase/firestore": "https://esm.sh/firebase@11.1.0/firestore",
+    "@google/genai": "https://esm.sh/@google/genai@1.38.0",
+    "firebase/app": "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js",
+    "firebase/firestore": "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "firebase/": "https://esm.sh/firebase@^12.8.0/"
